Fixe index.html.

--- a/perso/kaori.html
+++ b/perso/kaori.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="blocpage">
 	<nav>
-	<a href="../cityhunter.html">aceuil</a>
+	<a href="../index.html">aceuil</a>
 	</nav>
 	<h1> kaori </h1>
 <header> Qui est ryo Kaori ? </header>
