--- a/perso/umibozu.html
+++ b/perso/umibozu.html
@@ -9,7 +9,7 @@
 <body>
 <div id="blocpage">
 	<nav>
-	<a href="../cityhunter.html">aceuil</a>
+	<a href="../index.html">aceuil</a>
 	</nav>
 	<h1> umibozu </h1>
 <header> Qui est ryo Umibozu? </header>
