Fix utf-8 enconding.

--- a/perso/ryo.html
+++ b/perso/ryo.html
@@ -14,9 +14,9 @@
 	<h1> ryo saeba </h1>
 <header> Qui est ryo Ryo ? </header>
 <section>
-	<p>Il est plus connu dans le milieu clandestin sous le nom « City Hunter ». Sur un plan professionnel, il est un des meilleurs : conduite, déductions, réflexes, précision de tir. Il est très largement au-dessus de la moyenne. Lui-même ne reconnaît que Umibôzu comme rival potentiel. Cependant son gros défaut reste son caractère obsédé : voir une belle fille lui fait perdre tous ses moyens et son sérieux, et l'entraîne souvent dans des situations délicates.
+	<p>Il est plus connu dans le milieu clandestin sous le nom  "City Hunter". Sur un plan professionnel, il est un des meilleurs : conduite, dÃ©ductions, rÃ©flexes, prÃ©cision de tir. Il est trÃ¨s largement au-dessus de la moyenne. Lui-mÃªme ne reconnaÃ®t que Umibozu comme rival potentiel. Cependant son gros dÃ©faut reste son caractÃ©re obsÃ©dÃ© : voir une belle fille lui fait perdre tous ses moyens et son sÃ©rieux, et l'entraÃ®ne souvent dans des situations dÃ©licates.
 
-Une des rares personnes à pouvoir le frapper est Kaori, qui le punit régulièrement pour ses outrances. Même s'il paraît toujours très enjoué et obsédé, il a un passé particulièrement sombre.</p>
+Une des rares personnes Ã  pouvoir le frapper est Kaori, qui le punit rÃ©guliÃ©rement pour ses outrances. MÃªme s'il paraÃ®t toujours trÃ¨s enjouÃ© et obsÃ©dÃ©, il a un passÃ© particuliÃ©rement sombre.</p>
 </section>
 </div>
 </body>
