Fix link buttons with css.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 <div id="blocpage">
 	<h1> city hunter </h1>
-	<nav>
-	<a href="perso/ryo.html">ryo saeba</a>
-	<a href="perso/kaori.html">kaori</a>
-	<a href="perso/saeko.html">saeko</a>
-	<a href="perso/umibozu.html">umibozu</a>
+	<nav class="navbar">
+  	<a href="perso/ryo.html">Ryo saeba</a>
+  	<a href="perso/kaori.html">Kaori</a>
+  	<a href="perso/saeko.html">Saeko</a>
+  	<a href="perso/umibozu.html">Umibozu</a>
 	</nav>
 <header>
 	Qu'est ce que city hunter ?
